[gd_scene load_steps=6 format=3 uid="uid://dwl8qyprnb8is"]

[ext_resource type="Script" path="res://scenes/color_picker/color_picker.gd" id="1_pcwig"]
[ext_resource type="PackedScene" uid="uid://dl1hwv3q6do0e" path="res://scenes/color_picker/color_strip.tscn" id="2_oesjs"]
[ext_resource type="FontFile" uid="uid://c1wr0ejvh1ea7" path="res://fonts/noto-sans/NotoSans_ExtraCondensed-Regular.ttf" id="3_nvgas"]
[ext_resource type="PackedScene" uid="uid://cuvv0ttrqqef3" path="res://scenes/color_picker/color_handle.tscn" id="5_fqclp"]

[sub_resource type="Theme" id="Theme_e7lmp"]
default_font = ExtResource("3_nvgas")
default_font_size = 17

[node name="ColorPicker" type="Window"]
title = "Color Picker"
size = Vector2i(300, 300)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
popup_window = true
script = ExtResource("1_pcwig")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Color" type="ColorRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Strips" type="VBoxContainer" parent="HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HueStrip" parent="HBoxContainer/Control/Strips" instance=ExtResource("2_oesjs")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SaturationStrip" parent="HBoxContainer/Control/Strips" instance=ExtResource("2_oesjs")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
color_param = 1

[node name="LightnessStrip" parent="HBoxContainer/Control/Strips" instance=ExtResource("2_oesjs")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
color_param = 2

[node name="OKHSL" type="Label" parent="HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -24.0
offset_right = -3.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_e7lmp")
text = "OKHSL"
metadata/keep_anchors = true

[node name="Handles" type="VBoxContainer" parent="HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HueHandle" parent="HBoxContainer/Control/Handles" instance=ExtResource("5_fqclp")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SaturationHandle" parent="HBoxContainer/Control/Handles" instance=ExtResource("5_fqclp")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
color_param = 1

[node name="LightnessHandle" parent="HBoxContainer/Control/Handles" instance=ExtResource("5_fqclp")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
color_param = 2

[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="handle_left_changed" from="HBoxContainer/Control/Strips/HueStrip" to="HBoxContainer/Control/Handles/HueHandle" method="set_handle_left"]
[connection signal="handle_left_changed" from="HBoxContainer/Control/Strips/SaturationStrip" to="HBoxContainer/Control/Handles/SaturationHandle" method="set_handle_left"]
[connection signal="handle_left_changed" from="HBoxContainer/Control/Strips/LightnessStrip" to="HBoxContainer/Control/Handles/LightnessHandle" method="set_handle_left"]
